--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
     <div class = "container">
       <h2 class="text-center mt-4">Psl Mini</h2>
 
+      <!-- buttons -->
+      <div class="buttons my-4">
+        <div class="float-right">
+          <button type="button" class="refresh-btn btn btn-success">Sign In</button>
+          <button type="button" class="refresh-btn btn btn-info">Refresh</button>
+        </div>
+      </div>
+
       <!-- for showing matches for non-admin -->
       <div class="matches mt-5">
-
+        <h4 class="">Matches will be shown here</h4>
       </div>
     </div>
 
